# CableForge

./: README.md  cypress.config.ts  dev-desktop-only.bat  lighthouserc.js  package-lock.json  package.json  playwright.config.ts  postcss.config.js  start-desktop.bat  tauri-dev-only.bat  vitest.config.ts
.github/workflows/: ci.yml
cypress/fixtures/: cables.json  invalid-cables.csv
cypress/support/: commands.ts  e2e.ts
docs/: DEVELOPMENT_ROADMAP.md  ICON_SYSTEM.md  REQUIREMENTS.md  TECHNICAL_SPEC.md  USER_STORIES.md
mockups/: README.md  UI_MOCKUPS.md  package.json  start-server.bat
mockups/css/: base.css  components.css  layout.css  tables.css  theme.css
mockups/html/: export-builder.html  index.html  library-browser.html
mockups/js/: mockup-interactions.js
src/: App.test.tsx  App.tsx  index.css  index.tsx  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.desktop.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/calculations/: mod.rs
src-tauri/src/database/: commands.rs  mod.rs  models.rs
src-tauri/src/validation/: mod.rs
src/__mocks__/: tauri-api.ts
src/config/: filter-types.ts  import-mappings.ts
src/contexts/: UIContext.tsx
src/hooks/: useAsyncOperation.ts  useDebounce.ts  useKeyboardShortcuts.ts  useLocalStorage.ts  useSelectableList.ts  useTableSelection.ts  useVirtualizedList.ts  useWebWorker.ts
src/services/: auto-numbering-service.ts  calculation-service.ts  column-service-aggregator.ts  database.test.ts  (+21 more)
tests/: README.md  global-setup.ts  global-teardown.ts  setup.ts
(+115 files in other folders)
